--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,6 @@
     <string name="comment_hint">Enter your comment here</string>
     <string name="add_feeling">Add Feeling</string>
     <string name="edit_feeling">Edit Feeling</string>
-    <string name="date">Date</string>
     <string name="stats">Stats</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
@@ -19,4 +18,7 @@
     <string name="clear">Clear</string>
     <string name="delete">Delete</string>
     <string name="save">Save</string>
+    <string name="ok">Okay</string>
+    <string name="time">Time</string>
+    <string name="date">Date</string>
 </resources>
